// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > Année incomplète 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: undefined"
`;

exports[`calculate simulations-indépendant > Année incomplète 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3749
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1360
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2080
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . totale: 3749"
`;

exports[`calculate simulations-indépendant > Année incomplète 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7205
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1567
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5155
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . totale: 7205"
`;

exports[`calculate simulations-indépendant > Année incomplète 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14082"
`;

exports[`calculate simulations-indépendant > Année incomplète 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 140741
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 30519
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103020
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73817
indépendant . rémunération . totale: 140741"
`;

exports[`calculate simulations-indépendant > Année incomplète 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1272290
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 154818
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1035085
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528575
indépendant . rémunération . totale: 1272290"
`;

exports[`calculate simulations-indépendant > DROM 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 20000

Notifications affichées : indépendant . cotisations et contributions . cotisations . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 72973
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 17615
indépendant . cotisations et contributions . début activité: 1746
indépendant . revenu professionnel: 51566
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41365
indépendant . rémunération . totale: 72973"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28412
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6252
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19433
indépendant . rémunération . totale: 28412"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28440
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6260
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19433
indépendant . rémunération . totale: 28440"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 87629
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 21221
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 61881
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48270
indépendant . rémunération . totale: 87629"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 73208
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 73208"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 59111
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 59111"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 79445
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 19115
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51705
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41323
indépendant . rémunération . totale: 79445"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 81039
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 19512
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51739
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41313
indépendant . rémunération . totale: 81039"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 85758
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 20691
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51840
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41283
indépendant . rémunération . totale: 85758"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 75026
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 14335
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51610
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41352
indépendant . rémunération . totale: 75026"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 75028
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 11813
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51610
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41352
indépendant . rémunération . totale: 75028"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 681523
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 93851
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 517952
indépendant . rémunération . nette: 500000
indépendant . rémunération . nette . après impôt: 281970
indépendant . rémunération . totale: 681523"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 20000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 300000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 300000"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: 3593
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 50000"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1465
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1185
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 118
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100
indépendant . rémunération . totale: 1465"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 220
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 0
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 100
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100
indépendant . rémunération . totale: 220"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 967
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 35
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 804
indépendant . rémunération . nette: 800
indépendant . rémunération . nette . après impôt: 800
indépendant . rémunération . totale: 967"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 45000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 9000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: 1006
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 10000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 15000"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 55000"
`;

exports[`calculate simulations-indépendant > imposition à l'IR 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 23564
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 71284
indépendant . rémunération . nette: 69138
indépendant . rémunération . nette . après impôt: 54587
indépendant . rémunération . totale: 100000"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28412
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6252
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 17939
indépendant . rémunération . totale: 28412"
`;

exports[`calculate simulations-indépendant > inversions IR 1`] = `
"entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 4027
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 13897
indépendant . rémunération . nette: 13489
indépendant . rémunération . nette . après impôt: 13489
indépendant . rémunération . totale: 19000"
`;

exports[`calculate simulations-indépendant > inversions IR 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14082"
`;

exports[`calculate simulations-indépendant > inversions IR 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 62309
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 15479
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 43575
indépendant . rémunération . nette: 42238
indépendant . rémunération . nette . après impôt: 36000
indépendant . rémunération . totale: 62309"
`;

exports[`calculate simulations-indépendant > inversions IS 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14082"
`;

exports[`calculate simulations-indépendant > inversions IS 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14082"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1952
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1225
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 532
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500
indépendant . rémunération . totale: 1952"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 2561
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1274
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1050
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
indépendant . rémunération . totale: 2561"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3168
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1323
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1567
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500
indépendant . rémunération . totale: 3168"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3749
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1360
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2080
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . totale: 3749"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7205
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1567
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5155
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . totale: 7205"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14082"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 140741
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 30519
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103020
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73817
indépendant . rémunération . totale: 140741"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1272290
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 154818
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1035085
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528575
indépendant . rémunération . totale: 1272290"
`;
